Fix dropdown overflow.

--- a/frontend/app/framework/angular/forms/editors/dropdown.component.scss
+++ b/frontend/app/framework/angular/forms/editors/dropdown.component.scss
@@ -12,6 +12,10 @@ $color-input-disabled: #eef1f4;
     }
 }
 
+.no-wrap {
+    white-space: nowrap;
+}
+
 .search-form {
     padding: .5rem;
 }
